--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   provider:
-  easy_localization: ^3.0.3
   google_fonts: ^5.1.0
   calendar_date_picker2: ^0.5.3
   intl:
@@ -48,6 +47,9 @@ dependencies:
   flutter_screenutil: ^5.9.3
   path: ^1.9.0
   path_provider: ^2.1.4
+  table_calendar: ^3.2.0
+  intl_phone_field: ^3.2.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
@@ -74,10 +76,15 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/fonts/
-     - lib/src/modules/sections/ui/imgs/
-     - lib/src/modules/more/ui/imgs/
-     - lib/src/modules/home/ui/imgs/
-     - lib/src/modules/auth/ui/imgs/
+     - assets/icons/
+     - lib/src/modules/home/ui/assets/imgs/
+     - lib/src/modules/home/ui/assets/icons/
+     - lib/src/modules/more/ui/assets/imgs/
+     - lib/src/modules/more/ui/assets/icons/
+     - lib/src/modules/home/ui/assets/imgs/
+     - lib/src/modules/home/ui/assets/icons/
+     - lib/src/modules/auth/ui/assets/imgs/
+     - lib/src/modules/auth/ui/assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
