--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,11 @@ dependencies:
   table_calendar: ^3.2.0
   intl_phone_field: ^3.2.0
   dropdown_button2: ^2.3.9
+  like_button: ^2.0.5
+  favorite_button: ^0.0.4
+  carousel_slider: ^5.0.0
+  flutter_rating: ^2.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -81,8 +86,8 @@ flutter:
      - lib/src/modules/home/ui/assets/icons/
      - lib/src/modules/more/ui/assets/imgs/
      - lib/src/modules/more/ui/assets/icons/
-     - lib/src/modules/home/ui/assets/imgs/
-     - lib/src/modules/home/ui/assets/icons/
+     - lib/src/modules/sections/ui/assets/imgs/
+     - lib/src/modules/sections/ui/assets/icons/
      - lib/src/modules/auth/ui/assets/imgs/
      - lib/src/modules/auth/ui/assets/icons/
 
