--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,13 @@ dependencies:
   intl:
   flutter_svg: ^2.0.7
   http:
-  image_picker: ^1.0.4
+  image_picker: ^1.1.2
   email_validator: ^2.1.17
   shared_preferences: ^2.2.1
   flutter_screenutil: ^5.9.3
   path: ^1.9.0
   path_provider: ^2.1.4
-  table_calendar: ^3.2.0
+  table_calendar: ^3.1.0
   intl_phone_field: ^3.2.0
   dropdown_button2: ^2.3.9
   like_button: ^2.0.5
@@ -57,6 +57,7 @@ dependencies:
   google_maps_flutter: ^2.10.1
   flutter_rating_bar: ^4.0.1
   flutter_slider_indicator: ^1.0.0
+#  flutter_quill: ^11.1.0
 
 
 dev_dependencies:
