--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   intl:
   flutter_svg: ^2.0.7
   http:
-  image_picker: ^1.1.2
+  image_picker: ^1.0.4
   email_validator: ^2.1.17
   shared_preferences: ^2.2.1
   flutter_screenutil: ^5.9.3
@@ -57,7 +57,10 @@ dependencies:
   google_maps_flutter: ^2.10.1
   flutter_rating_bar: ^4.0.1
   flutter_slider_indicator: ^1.0.0
-#  flutter_quill: ^11.1.0
+  flutter_quill: ^11.1.0
+  quill_native_bridge: ^11.0.0
+  url_launcher: ^6.3.1
+  flutter_keyboard_visibility_temp_fork: ^0.1.5
 
 
 dev_dependencies:
