--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   calendar_date_picker2: ^0.5.3
   intl:
   flutter_svg: ^2.0.7
-  http:
   image_picker: ^1.0.4
   email_validator: ^2.1.17
   shared_preferences: ^2.2.1
@@ -61,6 +60,14 @@ dependencies:
   quill_native_bridge: ^11.0.0
   url_launcher: ^6.3.1
   flutter_keyboard_visibility_temp_fork: ^0.1.5
+  animated_bottom_navigation_bar: ^1.4.0
+  http: ^1.3.0
+  dio: ^5.8.0+1
+#  firebase_core: ^3.12.1
+#  firebase_messaging: ^15.2.4
+#  firebase_auth: ^5.5.1
+
+
 
 
 dev_dependencies:
