--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_keyboard_visibility_temp_fork: ^0.1.5
   animated_bottom_navigation_bar: ^1.4.0
-  http: ^1.3.0
+#  http: ^1.3.0
   dio: ^5.8.0+1
 #  firebase_core: ^3.12.1
 #  firebase_messaging: ^15.2.4
