--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,9 @@ dependencies:
   google_maps_flutter: ^2.10.1
   flutter_rating_bar: ^4.0.1
   flutter_slider_indicator: ^1.0.0
-#  flutter_quill: ^11.1.0
-#  quill_native_bridge: ^11.0.0
-#  url_launcher: ^6.3.1
+  flutter_quill: ^11.1.0
+  quill_native_bridge: ^11.0.0
+  url_launcher: ^6.3.1
   flutter_keyboard_visibility_temp_fork: ^0.1.5
   animated_bottom_navigation_bar: ^1.4.0
 #  http: ^1.3.0
