--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,18 +56,35 @@ dependencies:
   google_maps_flutter: ^2.10.1
   flutter_rating_bar: ^4.0.1
   flutter_slider_indicator: ^1.0.0
-#  flutter_quill: ^11.1.0
+  flutter_quill: ^11.1.0
 #  quill_native_bridge: ^11.0.0
   url_launcher: ^6.3.1
   flutter_keyboard_visibility_temp_fork: ^0.1.5
   animated_bottom_navigation_bar: ^1.3.3
+  flutter_launcher_icons: ^0.14.3
 #  http: ^1.3.0
   dio: ^5.8.0+1
 #  firebase_core: ^3.12.1
 #  firebase_messaging: ^15.2.4
 #  firebase_auth: ^5.5.1
 
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/imgs_icons/general/logo.png"
+  min_sdk_android: 21
+  web:
+      generate: true
+      image_path: "assets/imgs_icons/general/logo.png"
+      background_color: "#hexcode"
+      theme_color: "#hexcode"
+  windows:
+      generate: true
+      image_path: "assets/imgs_icons/general/logo.png"
+      icon_size: 48 # min:48, max:256, default: 48
+  macos:
+      generate: true
+      image_path: "assets/imgs_icons/general/logo.png"
 
 
 dev_dependencies:
