--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   flutter_keyboard_visibility_temp_fork: ^0.1.5
   animated_bottom_navigation_bar: ^1.3.3
   flutter_launcher_icons: ^0.14.3
+  google_sign_in: ^6.1.5
+  flutter_secure_storage: ^8.0.0
   #  http: ^1.3.0
   dio: ^5.8.0+1
 #  firebase_core: ^3.12.1
