--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   google_sign_in: ^6.1.5
   flutter_secure_storage: ^8.0.0
+  gap: ^3.0.1
+  http_parser: ^4.1.2
   #  http: ^1.3.0
   dio: ^5.8.0+1
 #  firebase_core: ^3.12.1
