--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,12 +12,12 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8  // Updated to 21
+        targetCompatibility = JavaVersion.VERSION_1_8  // Updated to 21
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget =  JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
