--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dependencies:
   google_maps_flutter: ^2.10.1
   flutter_rating_bar: ^4.0.1
   flutter_slider_indicator: ^1.0.0
-  flutter_quill: ^11.1.0
-  quill_native_bridge: ^11.0.0
+#  flutter_quill: ^11.1.0
+#  quill_native_bridge: ^11.0.0
   url_launcher: ^6.3.1
   flutter_keyboard_visibility_temp_fork: ^0.1.5
   animated_bottom_navigation_bar: ^1.3.3
@@ -65,9 +65,9 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_secure_storage: ^8.0.0
   gap: ^3.0.1
-  http_parser: ^4.1.2
   #  http: ^1.3.0
   dio: ^5.8.0+1
+  flutter_image_compress: ^2.4.0
 #  firebase_core: ^3.12.1
 #  firebase_messaging: ^15.2.4
 #  firebase_auth: ^5.5.1
