--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,8 +4,11 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-}
 
+}
+dependencies {
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+}
 android {
     namespace = "com.example.tajawal"
     compileSdk = flutter.compileSdkVersion
