--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,12 +65,11 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_secure_storage: ^8.0.0
   gap: ^3.0.1
-  #  http: ^1.3.0
   dio: ^5.8.0+1
   flutter_image_compress: ^2.4.0
-#  firebase_core: ^3.12.1
-#  firebase_messaging: ^15.2.4
-#  firebase_auth: ^5.5.1
+  infinite_scroll_pagination: ^5.0.0
+  stomp_dart_client: ^2.1.3
+
 
 flutter_icons:
   android: true
