--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   favorite_button: ^0.0.4
   carousel_slider: ^5.0.0
   flutter_rating: ^2.0.2
-  google_maps_flutter: ^2.10.1
+#  google_maps_flutter: ^2.10.1
   flutter_rating_bar: ^4.0.1
   flutter_slider_indicator: ^1.0.0
   flutter_quill: ^11.1.0
