--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,9 @@
 
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
@@ -10,7 +13,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 }
 android {
-    namespace = "com.example.tajawal"
+    namespace = "com.levantsale.levantsale"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -25,7 +28,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.tajawal"
+        applicationId = "com.levantsale.levantsale"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
