--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
   flutter_image_compress: ^2.4.0
   infinite_scroll_pagination: ^5.0.0
   stomp_dart_client: ^2.1.3
+  change_app_package_name: ^1.5.0
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
 
 
 flutter_icons:
