--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   http: ^1.4.0
+  html_unescape: ^2.0.0
+  flutter_localization: ^0.3.2
 
 
 flutter_icons:
