--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,7 @@ plugins {
 }
 dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 }
 android {
     namespace = "com.app.levantsale"
@@ -20,6 +21,7 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8  // Updated to 21
         targetCompatibility = JavaVersion.VERSION_1_8  // Updated to 21
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -27,14 +29,15 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.app.levantsale"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+
+        ndk {
+            abiFilters "arm64-v8a", "armeabi-v7a", "x86_64"
+        }
     }
 
     buildTypes {
