--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,31 +73,18 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   http: ^1.4.0
+  firebase_analytics: ^11.4.6
+  flutter_local_notifications: ^19.2.1
+  firebase_messaging: ^15.2.6
 
 
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/imgs_icons/general/logo.png"
-  adaptive_icon_background: "#ffffff"
-  min_sdk_android: 21
-  web:
-      generate: true
-      image_path: "assets/imgs_icons/general/logo.png"
-      background_color: "#hexcode"
-      theme_color: "#hexcode"
-  windows:
-      generate: true
-      image_path: "assets/imgs_icons/general/logo.png"
-      icon_size: 48 # min:48, max:256, default: 48
-  macos:
-      generate: true
-      image_path: "assets/imgs_icons/general/logo.png"
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -105,6 +92,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/imgs_icons/general/logo.png"
+  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
