--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,10 +8,13 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 
+
 }
 dependencies {
+    implementation(platform("com.google.firebase:firebase-bom:33.13.0"))
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+    implementation 'com.google.firebase:firebase-messaging'
 }
 android {
     namespace = "com.app.levantsale"
