--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,8 @@ dependencies:
   firebase_messaging: ^15.2.6
   html_unescape: ^2.0.0
   flutter_localization: ^0.3.2
-
+  timeago: ^3.7.1
+  flutter_exif_rotation: ^0.5.2
 
 
 
