--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+<key>NSMicrophoneUsageDescription</key>
+<string>This app needs access to the microphone to perform voice search.</string>
+<key>NSSpeechRecognitionUsageDescription</key>
+<string>This app uses speech recognition for search functionality.</string>
+
    <key>CFBundleURLTypes</key>
    <array>
      <dict>
@@ -14,6 +19,7 @@
      </dict>
    </array>
     <key>NSAppTransportSecurity</key>
+
     <dict>
     <key>NSAllowsArbitraryLoads</key>
     <true/>
